# NumericalMethods

./: .gitignore  CMakeLists.txt
Basic principles and methods/Integral sin(x)+cos(x)/: integral.cpp
Basic principles and methods/Isolated Root/: isolated_root.cpp
Basic principles and methods/Kahan/: kahan.cpp
Basic principles and methods/Lagrange's polinom/: plot.csv
Basic principles and methods/Machine zero, epsilon and iInfinity/: float_double_properties.cpp
Basic principles and methods/Numerical derivative/: Derivative.ipynb  plotA.csv
Basic principles and methods/Runge Kutta/: PlotGrapher.ipynb
Difference schemes in gas dynamics/Detonation/: Sode.ipynb  Solver.cpp  Solver.ipynb
Double integer/: main.cpp  smokedout.cpp
Double integral/: main.cpp
Exponent/: CMakeLists.txt  main.cpp
Integral/: Kirill source.cpp  Lab3.ipynb  main.cpp
Isolated Root/: main.cpp
Lagrange's polinom/: Lagrangian.ipynb  main.cpp
Machine zero, epsilon and iInfinity/: Float double properties.cpp
Matrix Schrodinger/: PlotGrapher.ipynb  Source.cpp
Numerical derivative/: Derivative.ipynb  main.cpp  plotB.csv
Numerical methods in quantum mechanics/Matrix Schrodinger/: CMakeLists.txt  plot.csv
Potencial of field/: Potential.ipynb  main.cpp  potential.csv
RungeKutta/: Adams.csv  PlotGrapher.ipynb  RK2.csv  RK4.csv  main.cpp
Schrodinger/: Wronski.csv  main.cpp
SchrodingerOneDimension/: CMakeLists.txt  EnergyAndWronskian.csv  PlotGrapher.ipynb  Psi.csv  PsiLeft.csv  PsiRight.csv  func11.txt  func12.txt  func_11.txt  func_12.txt  main.cpp
(+46 files in other folders)
