cmake_minimum_required(VERSION 3.23)
project(NumericalMethods)

set(CMAKE_CXX_STANDARD 14)

add_executable(NumericalMethods
        "Double integral/main.cpp"
        #"Integral/main.cpp"
        #"Isolated Root/main.cpp"
        #"Lagrange's polinom/main.cpp"
        #"Machine zero, epsilon and iInfinity/Float double properties.cpp"
        #"Numerical derivative/main.cpp"
        #"Potencial of field/main.cpp"
		#"Exponent/main.cpp"
        )
